<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coord_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:scrollbars="none">

        <include layout="@layout/toolbar" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:clipToPadding="false"
        android:scrollbars="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <edu.uci.ics.jung.visualization.VisualizationViewer
            android:id="@+id/visualization_viewer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_graph" />

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fab_margin"
        android:background="@null"
        android:clickable="true"
        android:contentDescription="@string/description_graph_fab_refresh"
        android:focusable="true"
        app:backgroundTint="?attr/colorPrimary"
        app:fabSize="mini"
        app:layout_anchor="@id/container"
        app:layout_anchorGravity="center|bottom"
        app:srcCompat="@drawable/ic_refresh"
        app:tint="?attr/colorOnPrimary" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        android:background="@null"
        android:clickable="true"
        android:contentDescription="@string/description_graph_fab_prev"
        android:focusable="true"
        app:backgroundTint="?attr/colorPrimary"
        app:fabSize="mini"
        app:layout_anchor="@id/container"
        app:layout_anchorGravity="left|bottom"
        app:srcCompat="@drawable/ic_navigate_prev"
        app:tint="?attr/colorOnPrimary" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        android:background="@null"
        android:clickable="true"
        android:contentDescription="@string/description_graph_fab_next"
        android:focusable="true"
        app:backgroundTint="?attr/colorPrimary"
        app:fabSize="mini"
        app:layout_anchor="@id/container"
        app:layout_anchorGravity="right|bottom"
        app:srcCompat="@drawable/ic_navigate_next"
        app:tint="?attr/colorOnPrimary" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
