...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:theme="@style/MyCustomOverlay" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_dependencies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        android:background="@null"
        android:clickable="true"
...
        app:layout_anchor="@id/container"
        app:layout_anchorGravity="bottom|start"
        app:srcCompat="@drawable/ic_dependency"
        app:tint="?attr/colorOnPrimary" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_semantics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        android:background="@null"
        android:clickable="true"
...
