...
	<string name="title_activity_annotate">Annotate</string>

	<string name="title_sentences">Sentences</string>
	<string name="title_sentence_1">Sentence 1</string>

	<string name="action_model">Model</string>
	<string name="action_bind">Bind</string>
	<string name="action_unbind">Unbind</string>
	<string name="action_bind_unbind">bind_unbind</string>
	<string name="action_input">Input</string>
	<string name="action_app">App</string>
	<string name="action_status">Status</string>
	<string name="action_version">Version</string>
	<string name="action_engine_version">Engine version</string>
...
